
syntax = "proto3";
//option cc_enable_arenas = true;
//option php_generic_services = true;

package protobuffer.dotwproto;

service ServerDotw {
    rpc psfilterRequest (PSFRequest) returns (PSFReply) {}
}

message PSFRequest {
    string psfilter = 1; //Identified generate string
    int32 customerId = 2;
    string environment = 3;
    int32 requestSource = 4;
    repeated int32 exceptRestrictions = 5;
    bool passengerNationalityOrResidenceProvided = 6;
    repeated int32 hotelIds = 7;
    string city = 8;
    int32 country = 9;
    repeated int32 bookingChannelsWithAutoMapping = 10;
    repeated int32 bookingChannelTypes = 11;
    repeated int32 excludedBookingchannel = 12;
    bool activeForRoomCategories = 13;

	message RoomOccupancy {
		int32 adults = 1;
		repeated int32 children = 2;
		bool twin = 3;
		bool extraBed = 4;
	}

    repeated RoomOccupancy roomOccupancy = 14;

	 message HotelFilters {
        repeated int32 rating = 1; //array(int)
        int32 luxury = 2; //integer bool
        string location = 3; //string
        repeated int32 locationId = 4; //array(int)
        repeated int32 amenitie = 5; //array(int)
        repeated int32 leisure = 6; //array(int)
        repeated int32 business = 7; //array(int)
        repeated int32 hotelPreference = 8; //array(int)
        repeated int32 chain = 9; //array(int)
        string attraction = 10; //string
        string hotelName = 11; //string
        int32 builtYear = 12; //integer
        int32 renovationYear = 13; //integer
        int32 floors = 14; //integer
        int32 noOfRooms = 15; //integer
        int32 fireSafety = 16; //integer bool
        string lastUpdated = 17; //string
    }

    HotelFilters hotelFilters = 15;

	message RoomTypeFilters {
		int32 suite = 1; //integer
		repeated int32 roomAmenitie = 2; //array(int)
		repeated int32 roomId = 3; //array(int)
		string roomName = 4; //string

		message RoomCategory {
			int32 MainCategory = 1;//62215; //integer
			int32 SubCategory = 2;//integer
			int32 View = 3;//integer
			int32 BeddingType = 4;//integer
			int32 Attribute1 = 5;//integer
			int32 Attribute2 = 6;//integer
		}

		repeated RoomCategory roomCategories = 5; //roomCategories Objects
	}

    RoomTypeFilters roomTypeFilters = 16;

	message AdditionalFilters {
        
    }

    AdditionalFilters additionalFilters = 17;

	message  SearchPeriodCriteria{ //Mandatory
        int32 travelFrom = 1;//Mandatory int
        int32 travelTo = 2;//Mandatory int
        int32 bookingDateTime = 3;//Mandatory int
    }

    SearchPeriodCriteria searchPeriodCriteria = 18;
}

message PSFReply {

	message RoomData{
		int32 roomTypeCode = 1;
	}

	message HotelCode{
		int32 hotelCodeOriginal = 1;
		string cityCode = 2;
		repeated RoomData roomData = 3;
	}

	message BookingChannelCode{
		repeated HotelCode hotelCode = 1;
	}


	message RoomIndex{
		repeated BookingChannelCode roomIndex = 1;
	}

	repeated RoomIndex Results = 1;
	string error = 2;
	string errorCode = 3;
	string replystring = 4;
	int32 replystringInt = 5;

}